# ai-creative-toolbox

./: .bazelignore  .bazelrc  .coveragerc  .editorconfig  .envrc  .gitignore  .isort.cfg  .pre-commit-config.yaml  .tool-versions  AUTHORS.md  BUILD  BUILD.bazel  CONTRIBUTING.md  LICENSE.txt  MODULE.bazel  Makefile  README.md  ai-creative-toolbox.code-workspace  app.py  go.mod  go.sum  go.work  main.tf  outputs.tf  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  requirements.txt  requirements_lock.txt  scaffold.requirements.txt  setup.cfg  setup.py  shell.nix  tools.go  variables.tf
.github/workflows/: ci.yml  core_automation.release.yml  core_automation.test.yml  main_cli.release.yml  scrape-percipio-cli.release.yml
captcha/: go.mod  go.sum  main.go
core_automation/: BUILD  BUILD.bazel  CHANGELOG.md  __init__.py  base_automation.py  file_to_gpt.py  file_to_gpt_test.py  gmail_to_gpt.py  gphotos_to_gpt.py  gpt_to_wav.py  setup.cfg  setup.py  shell.nix  url_to_gpt.py
core_automation/core/: container.py
core_automation/date/: date.py
core_automation/engine/: easyocr.py  tts_bark.py  tts_whisper.py
core_automation/files/: __init__.py
core_automation/intents/: lang.py
core_automation/lib/: singleton.py
core_automation/llms/: gpt.py  gpt_message.py  gpt_process.py  gpt_token_utils.py  llm_call_parrallel_processing.py
core_automation/mail/: helper.py
core_automation/text/: __init__.py  md.py
core_automation/text/parser/: __init__.py  parser_test.py
docs/: conf.py  index.md
interference-openai-api/: BUILD  __main__.py
interference_openai_api/: BUILD  BUILD.bazel  __init__.py  __main__.py
main_cli/: BUILD  BUILD.bazel  CHANGELOG.md  __init__.py  __main__.py  config.py  setup.cfg  setup.py
main_cli/tests/: conftest.py  test_main.py
main_cli/tests/configs/: gmail-example.json  prompt.md
nix/: python.nix
nix/nixpkgs/: default.nix
prompts/: letter-synthesis.txt
proxy/: go.mod  go.sum
rules/: asdf.bzl
scrape-percipio/: BUILD  index.js  package.json  pnpm-lock.yaml
scrape-percipio-cli/: BUILD  BUILD.bazel  CHANGELOG.md  cli.mjs  package.json
src/ia_utils/: __init__.py  gmail_to_gpt.py  gphotos_to_gpt.py  main.py
src/ia_utils/core/: container.py
src/ia_utils/engine/: .gitignore  doctr.py  image_magick.py  opencv.py  tesseract.py
src/ia_utils/files/: __init__.py
src/ia_utils/fs/: __init__.py
src/ia_utils/llms/: gpt.py
src/ia_utils/mail/: helper.py
src/ia_utils/models/: saleforce_img_to_text.py
src/ia_utils/text/: __init__.py
terraform/: .terraform.lock.hcl  main.tf  outputs.tf  terraform.tf  variables.tf
tests/: conftest.py  test_gmail_to_gpt.py
