load("@gazelle//:def.bzl", "gazelle")
load("@npm//:defs.bzl", "npm_link_all_packages")

exports_files([
    "shell.nix",
    ".envrc",
])

gazelle(name = "gazelle")

filegroup(
    name = "test_env",
    srcs = [
        ".env",
    ],
    visibility = ["//visibility:public"],
)

npm_link_all_packages(name = "node_modules")
