"Root module"

bazel_dep(name = "rules_nixpkgs_core", version = "0.10.0")

nix_repo = use_extension("@rules_nixpkgs_core//extensions:package.bzl", "nix_repo")

nix_repo.default(name = "nixpkgs")

use_repo(nix_repo, "nixpkgs")

bazel_dep(name = "gazelle", version = "0.32.0", repo_name = "gazelle")

#############
# Javascript
#############
bazel_dep(name = "aspect_rules_js", version = "1.31.0")

# By default you get the node version from DEFAULT_NODE_VERSION in @rules_nodejs//nodejs:repositories.bzl
# Optionally you can pin a different node version:
bazel_dep(name = "rules_nodejs", version = "5.8.2")

node = use_extension("@rules_nodejs//nodejs:extensions.bzl", "node")

######
# npm
######
npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm", dev_dependency = True)
npm.npm_translate_lock(
    name = "npm",
    pnpm_lock = "//:pnpm-lock.yaml",
    verify_node_modules_ignored = "//:.bazelignore",
)
use_repo(npm, "npm")

########
# Python
########
bazel_dep(name = "aspect_rules_py", version = "0.3.0")

bazel_dep(name = "rules_python", version = "0.25.0", dev_dependency = True)

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    configure_coverage_tool = True,
    is_default = True,
    python_version = "3.10",
)

bazel_dep(name = "rules_python_gazelle_plugin", version = "0.25.0")

use_repo(python, "python_3_10", "python_versions")

register_toolchains(
    "@python_versions//:all",
)

######
# pip
######
pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pip",
    python_version = "3.10",
    python_interpreter = "@python_3_10//:python",
    requirements_lock = "//:requirements_lock.txt",
)

use_repo(pip, "pip")

########
# go
########

bazel_dep(name = "rules_go", version = "0.41.0")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")

use_repo(go_deps)
