load("@aspect_rules_py//py:defs.bzl", "py_library", "py_pytest_main", "py_test")
load("@pip//:requirements.bzl", "requirement")

filegroup(
    name = "core_automation_files",
    srcs = [
        "pyproject.toml",
        "setup.cfg",
    ],
)

py_library(
    name = "core_automation",
    srcs = glob([
        "*.py",
        "**/*.py",
    ]),
    data = [
        ":core_automation_files",
    ],
    visibility = ["//main_cli:__pkg__"],
    deps = [
        requirement("google-api-python-client"),
        requirement("google-auth-httplib2"),
        requirement("google-auth-oauthlib"),
        requirement("beautifulsoup4"),
        requirement("markdown"),
        requirement("html2text"),
        requirement("jinja2"),
        requirement("pydantic"),
        requirement("easyocr"),
        requirement("wand"),
        requirement("opencv-python"),
        requirement("split_markdown4gpt"),
        requirement("tenacity"),
        requirement("transformers"),
        requirement("nltk"),
        requirement("suno-bark"),
        requirement("openai"),
        requirement("python-iso639"),
    ],
)

py_pytest_main(
    name = "__test__",
    args = [
        "--cov=core_automation",
        "--cov-report=html",
    ],
)

py_test(
    name = "core_automation_test",
    srcs = [
        ":__test__",
    ],
    data = [
        ":core_automation_files",
        "//:test_env",
    ],
    main = ":__test__.py",
    deps = [
        ":__test__",
        ":core_automation",
        requirement("pytest"),
        requirement("pytest-cov"),
        requirement("beautifulsoup4"),
        requirement("html2text"),
        requirement("python-dotenv"),
    ],
)
