load("@aspect_rules_py//py:defs.bzl", "py_library", "py_pytest_main", "py_test")
load("@pip//:requirements.bzl", "requirement")

py_library(
    name = "core_automation",
    srcs = glob([
        "*.py",
        "**/*.py",
    ]),
    visibility = ["//main_cli:__pkg__"],
    deps = [
        requirement("google-api-python-client"),
        requirement("google-auth-httplib2"),
        requirement("google-auth-oauthlib"),
        requirement("beautifulsoup4"),
        requirement("markdown"),
        requirement("html2text"),
        requirement("jinja2"),
        requirement("pydantic"),
        requirement("easyocr"),
        requirement("wand"),
        requirement("tenacity"),
        requirement("transformers"),
        requirement("nltk"),
        requirement("openai"),
        requirement("joblib"),
        requirement("langchain"),
        requirement("tiktoken"),
        requirement("litellm"),
        requirement("ninja"),
        requirement("opencv-python-headless"),
        requirement("python-iso639"),
    ],
)

py_pytest_main(
    name = "__test__",
    args = [
        "--cov=core_automation",
        "--cov-report=html",
    ],
)

py_test(
    name = "core_automation_test",
    srcs = [
        ":__test__",
    ],
    data = [
        "//:test_env",
    ],
    main = ":__test__.py",
    deps = [
        ":__test__",
        ":core_automation",
        requirement("pytest"),
        requirement("pytest-cov"),
        requirement("beautifulsoup4"),
        requirement("html2text"),
        requirement("python-dotenv"),
    ],
)
