load("@aspect_rules_py//py:defs.bzl", "py_binary")
load("@pip//:requirements.bzl", "requirement")

py_binary(
    name = "server",
    srcs = ["__main__.py"],
    imports = ["."],
    main = "__main__.py",
    deps = [
        requirement("flask_cors"),
        requirement("g4f"),
        requirement("watchdog"),
        requirement("httpx"),
        requirement("python-dotenv"),
        requirement("revChatGPT"),
    ],
)
