load("@aspect_rules_py//py:defs.bzl", "py_binary", "py_test")
load("@pip//:requirements.bzl", "requirement")

py_binary(
    name = "main_cli",
    srcs = glob([
        "*.py",
    ]),
    imports = ["."],
    main = "__main__.py",
    deps = [
        "//core_automation",
        requirement("python-dotenv"),
    ],
)

[py_test(
    name = "main_cli_" + f[:-3],
    size = "small",
    srcs = [f],
    main = f,
    deps = ["//main_cli"],
) for f in [
    "tests/test_main.py",
    "tests/conftest.py",
]]
